# Rust_Lang_GPT

./: README.md  Rust_program_ideas.txt  file_searchv2.rs  file_searchv3.rs  file_searchv4.rs  file_searchv6.rs  sha2search.rs
brute_force_domain_enum/: BFDE_v2.rs  BFDNE_v3.rs  Cargo.toml  Ghazghkull_Thraka.rs  notes_on_rayon.txt
brute_force_domain_enum/hydra_bfde/: Cargo.toml  hydra.rs
brute_force_domain_enum/hydra_deploy/: Cargo.toml  main.rs
brute_force_domain_enum/hydra_depth/: Cargo.toml  issues.txt  main.rs  readme.txt
brute_force_domain_enum/hydra_depth_VecDeque/: Cargo.toml  main.rs  readme.txt
brute_force_domain_enum/hydra_depth_to/: main.rs  readme.txt
brute_force_domain_enum/hydra_depth_to_grace/: Cargo.toml  main.rs  readme.txt  readme2.txt
brute_force_domain_enum/hydra_le/: main.rs  readme.txt
brute_force_domain_enum/hydra_mt/: Cargo.toml  hydrav2_main.rs  main.rs  readme.txt  troubleshoot.txt
brute_force_domain_enum/hydra_mt_timeout/: Cargo.toml  main.rs
brute_force_domain_enum/hydra_stack_depth/: main.rs
brute_force_domain_enum/rustdcrawl/: Cargo.toml  mainv1.rs
brute_force_domain_enum/snagrod/: Cargo.toml  snagrod_superfast.rs
docs/: dns_enum_errors.txt  file_searchv3.txt  rust_protobuf_ideas.txt
examples/: dns_enum.rs  file_search.rs  file_searchv3.rs  file_searchv5.rs  neosearch.rs
file-search/: Cargo.toml  GPT_prompt_dialog.txt  file_search_mt.rs
file_mover/: Cargo.toml  main.rs  readme.txt
html_downloader/: Cargo.toml  main.rs  readme.txt
hydra_mt/: .gitignore  LICENSE  README.md  hydra_mt_prompt.md  hydra_start_analysis.md
hydra_mt/docs/: debugging.md  gpt_implementation.md
hydra_mt/examples/async_advanced/: Cargo.toml
hydra_mt/examples/async_advanced/src/: main.rs
hydra_mt/examples/basic_parallel/: Cargo.toml
hydra_mt/examples/basic_parallel/src/: main.rs
hydra_mt/examples/recursive_crawler/: Cargo.toml
hydra_mt/examples/recursive_crawler/src/: main.rs
hydra_mt/hydra3/: Cargo.toml  main.rs
hydra_mt/hydra3-2/: main.rs
indexer/: Cargo.toml  main.rs  readme.txt
pdf_downloader/: Cargo.toml  main.rs  readme.md
pdf_downloader/2025/pdf_downloader/: Cargo.toml  main.rs  readme.md
pdf_downloader/src/: main.rs
posix_pipe/: child.rs  parent.rs  readme.md
posix_pipe/deepseek/: readme.md
posix_pipe/deepseek/IPC/: readme.md  twentyq.md
rayon/: Cargo.toml  multithread_duplicate_finder.txt  multithreaded_duplicate_finder.rs  multithreaded_hash_and_search.rs  rayon_mt_filesearch.rs
rayon_hasher/: Cargo.toml  indexer.rs
rayon_word/: Cargo.toml  word_counter.rs
rustbert/: CUDA_install_windows.txt
tokio_tests/: integration_tests.rs
web_crawler_pdf/: Cargo.toml  main.rs  readme.md
web_crawler_pdf/v2/: Cargo.toml  main.rs  readme.md
webcrawl_rayon/: Cargo.toml  crawler.rs  main.rs  readme.md  readme.old  rust_vs_go.md
webcrawl_rayon_bloom/: Cargo.toml  crawler.rs  main.rs  readme.md
webcrawl_rayon_bloom/wrb/: Cargo.toml  readme.md  wrb.md
webcrawl_rayon_bloom/wrb/src/: Cargo.toml  main.rs  readme.md
webcrawler/: Cargo.toml  main.rs  readme.md
