[package]
name = "high-performance-pdf-crawler"
version = "4.1.0"
edition = "2021"
description = "Optimized high-performance parallel PDF crawler"

[dependencies]
anyhow = "1.0"
dashmap = "5.5"
futures = "0.3"
governor = "0.6"
mime = "0.3"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.20"
regex = "1.10"
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "gzip", "brotli"], default-features = false }
rustc-hash = "2.0"
scraper = "0.20"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
url = "2.4"
urlencoding = "2.1"
mimalloc = { version = "0.1", features = ["secure"] }

# Optional dependencies for the "fast" feature
rlimit = { version = "0.10", optional = true }
select = "0.6.1"
robots_txt = "0.7.0"

# Unix-specific dependencies for file descriptor limits
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
fast = ["rlimit"]

[profile.release]
# Optimize for maximum performance
codegen-units = 16
lto = "thin"
panic = "abort"
opt-level = 3
overflow-checks = false

[profile.release.build-override]
opt-level = 3

# Environment variables for optimal compilation
# Set these when building:
# RUSTFLAGS="-C target-cpu=native -C target-feature=+crt-static"
# CARGO_PROFILE_RELEASE_LTO=true[package]
name = "high-performance-pdf-crawler"
version = "4.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance parallel PDF crawler optimized for maximum throughput"

# Environment variables for optimal compilation
# Set these when building:
# RUSTFLAGS="-C target-cpu=native -C target-feature=+crt-static"
# CARGO_PROFILE_RELEASE_LTO=true

[workspace]
exclude = [
    "pdf_downloader_rs"
]
