[package]
name = "hydra_mt_excluded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full", "macros", "fs"] }
scraper = "0.12.0"
reqwest = "0.11.6"
url = "2.2.2"
