[package]
name = "snagrodBFDNE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
scraper = "0.12"
tokio = { version = "1", features = ["full"] }
url = "2.2"
async-stream = "0.3.5"
futures = "0.3"
scopeguard = "1.1"
