[package]
name = "pdf_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap        = { version = "4", features = ["derive"] }
hyper       = { version = "0.14", features = ["full"] }
hyper-tls   = "0.5"
tokio       = { version = "1",  features = ["full"] }
scraper     = "0.17"
serde       = { version = "1",  features = ["derive"] }
serde_json  = "1"
url         = "2"
futures     = "0.3"
chrono      = { version = "0.4", features = ["serde"] }
