[package]
name = "basic_parallel_crawler"
version = "1.0.0"
edition = "2021"
authors = ["Hydra MT Contributors"]
description = "A basic parallel web crawler using Rayon"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
select = "0.6"
rayon = "1.10"
url = "2.5"
anyhow = "1.0"
