[package]
name = "pdf_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["stream"] }
select = "0.6"
thirtyfour = "0.33"
tokio = { version = "1", features = ["full"] }
url = "2.5"
urlencoding = "2.1"
